# Architect-s-Vault

./: .gitignore  README.md  package.json
3d-med-seg/: Readme.md
Aether-Agent/: README.md  package-lock.json  package.json
Agri-Agent/: README.md
Agri-Agent/backend-engine/: Cargo.toml
Agri-Agent/backend-engine/src/: main.rs
Agri-Agent/backend-engine/src/agents/: robotics.rs
Agri-Agent/backend-engine/src/services/: qdrant.rs  vision.rs  weather.rs
Apex-Agent/: README.md
Bio-Lit-LM/: README.md  docker-compose.yml  package.json
Bio-Stat-Agent/: README.md
Chem-Agent/: README.md
CineSense-Agent/: README.md
Codex-Agent/: README.md
Ed-Agent/: README.md
Factory-Agent/: README.md
Factory-Agent/backend/: Cargo.toml
Factory-Agent/backend/src/: main.rs
Factory-Agent/backend/src/agents/: inspection.rs
Factory-Agent/backend/src/models/: gemma.rs
Fin-Agent/: README.md
FluxInventory/: .gitignore
Gemini-Game/: README.md
Gene-Master/: README.md  package.json
GeneLedger-DAO/: README.md
Guardian-Agent/: README.md
Guardian-Agent/guardian-engine/: Cargo.toml
Guardian-Agent/guardian-engine/src/: analyzer.rs  main.rs  network.rs  olap_client.rs  response_agent.rs  vector_store.rs
InvenTrack/: Readme.md  project overview.md
Lexi-Agent/: README.md
Lexi-Agent/rust-core/: Cargo.toml
Lexi-Agent/rust-core/src/: lib.rs
MedBERT/: README.md
Neuro-Agent/: README.md
Neuro-Agent/signal-processor/: Cargo.toml
Neuro-Agent/signal-processor/src/: main.rs
Nexus-Enterprise-PM-Platform/: README.md  package.json  prisma.config.ts
Nutri-Coach/: README.md
Nutri-Coach/backend-rust/: Cargo.toml
Nutri-Coach/backend-rust/src/: main.rs
Nutri-Coach/backend-rust/src/agents/: mod.rs
Nutri-Coach/backend-rust/src/services/: food_segmentation.rs  vector_store.rs
OmniLingua-Agent/: README.md  package.json
OmniLingua-Translator/: Readme.md
OncoSense-A.I/: README.md
Para-Master/: README.md
Persona-Agent/: README.md  package.json
Pharma-RL/: README.md
Retail-GPT/: README.md
SemantiCart/: Readme.md
Synapse-360/: README.md
SynapseSearch-Agent/: README.md
ai-code-reviewer/: .gitignore  README.md  package-lock.json  package.json
automated-email-sender/: .gitignore  app.js  package.json
axum-echo-api/: Cargo.toml  Readme.md
axum-jwt-auth/: .gitignore  Cargo.toml  Readme.md
axum_file_server/: .gitignore  Cargo.toml
blockchain-ledger/: Readme.md
blog-cms/: Readme.md  app.js  package-lock.json  package.json
books-directory/: books.json  index.js  index_mongodb.js  package-lock.json  package.json
collaborative-whiteboard/: package.json
cryptography-tool/: README.md  package-lock.json  package.json
csv-to-json-migrator/: package.json
discord-github-bot/: Readme.md  index.js  package-lock.json  package.json
distributed-job-queue/: package.json
dynamic-store/: Readme.md
ecommerce-microservices/: Readme.md  index.html  package-lock.json  package.json  tsconfig.json
ecommerce_pro/: .gitignore  Readme.md
enterprise-oms/: .gitignore  Readme.md  package.json
fibonnaci-worker/: Readme.md  fib-worker.js  package.json  server.js
fibonnaci-worker-demo/: package.json
file-metadata-service/: Readme.md  index.js  package-lock.json  package.json
file-organizer/: Readme.md  organizer.js
github-health-dashboard/: .gitignore  Readme.md
image-worker/: package-lock.json  package.json
instant-translator/: Readme.md  index.js  package-lock.json  package.json
live-stats-dashboard/: Readme.md  (+3 more)
pulse-monitor/: Cargo.toml
pulse-monitor/src/: main.rs
pulse-monitor/static/: index.html
(+607 files in other folders)
