[package]
name = "pulse-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server with WebSocket support
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }

# System info & Serialization
# sysinfo 0.30+ changed the API; this code uses 0.30+ logic
sysinfo = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# Streaming utilities
futures-util = { version = "0.3.31", features = ["sink"] }