[package]
name = "backend-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
qdrant-client = "1.7.0"
dotenv = "0.15"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"