[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
# For Vision/AI (Example: candle for local Gemma inference)
candle-core = "0.3" 
# For OLAP (Example: ClickHouse or DuckDB)
clickhouse = "0.11"
tower-http = { version = "0.5", features = ["cors"] }
candle-core = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"