[package]
name = "guardian-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.1"
dotenv = "0.15.0"
lancedb = "0.23.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
candle-transformers = "0.9.1"
candle-nn = "0.9.1"
tokenizers = "0.19.1"
anyhow = "1.0"
[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"