[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Critical for N-API/Node.js integration

[dependencies]
# N-API for Node.js bridge
napi = { version = "2.12", features = ["async"] }
napi-derive = "2.12"

# LanceDB & Vector Search
lancedb = "0.23.0"
arrow-array = "53.0"  # LanceDB relies on Apache Arrow
arrow-schema = "53.0"
futures = "0.3"

# Gemma-2 Inference (Candle)
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"

# Utils
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
pdf-extract = "0.10.0"
