[package]
name = "signal-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
# For video/image processing
opencv = { version = "0.88", default-features = false, features = ["videoio", "imgproc"] }
# For audio processing
hound = "3.5" 
# For communicating with the Core Backend
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }