[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow-array = "57.1.0"
dotenv = "0.15.0"
image = "0.25.9"
lancedb = "0.23.0"
ort = "2.0.0-rc.10"
qdrant-client = "1.16.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
